[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pspdecrypt"
version = "1.0.0"
description = "Python bindings for PSP decryption library"
readme = "README_PYTHON.md"
requires-python = ">=3.6"
license = {text = "GPL-3.0"}
authors = [
    {name = "pspdecrypt contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
dependencies = [
    "pybind11>=2.6.0"
]

[project.urls]
Homepage = "https://github.com/xeonliu/pspdecrypt"
Repository = "https://github.com/xeonliu/pspdecrypt"
